# ynym-kakeibo

./: eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs
.github/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/tests/: conftest.py  test_health.py
frontend/: package-lock.json
specs/001-kakeibo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kakeibo/contracts/: openapi.yaml
src/app/: layout.tsx  page.tsx
src/app/api/categories/: route.ts
src/app/api/transactions/: route.ts
src/app/categories/: page.tsx
src/app/categories/[id]/: page.tsx
src/app/login/: actions.ts  page.tsx
src/app/settings/: actions.ts  page.tsx
src/components/: bottom-tabs.tsx  category-edit-form.tsx  category-form.tsx  login-form.tsx  month-selector.tsx  spinner.tsx  transaction-drawer.tsx  transactions-list.tsx
src/components/ui/: spinner.tsx
src/lib/: utils.ts
src/utils/: date.ts  format.ts  types.ts
src/utils/supabase/: client.ts  database.types.ts  middleware.ts  server.ts
supabase/: config.toml
